Add Celo chain support and multi-chain UI
- Integrate Celo RPC health/balance endpoints in backend
- Add Celo wallet connect and chain selector on frontend
- Show Celo network status and balances on homepage
- Document new Celo env vars and multi-chain support

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,4 @@ export STACKS_API_URL=https://api.testnet.stacks.co
 export IPFS_GATEWAY=https://gateway.pinata.cloud
 export PINATA_JWT=your_pinata_jwt_token_here
 export ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+export CELO_RPC_URL=https://alfajores-forno.celo-testnet.org
