--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,8 @@
 export VITE_NETWORK=testnet
 export VITE_API_URL=http://localhost:3001/api
 export VITE_CONTRACT_ADDRESS=your_contract_address_here
+export VITE_CELO_RPC_URL=https://alfajores-forno.celo-testnet.org
+export VITE_CELO_CHAIN_ID=0xaef3
+export VITE_CELO_CHAIN_NAME="Celo Alfajores Testnet"
+export VITE_CELO_CURRENCY=CELO
+export VITE_CELO_EXPLORER=https://alfajores-blockscout.celo-testnet.org
