--- a/backend/package.json
+++ b/backend/package.json
@@ -11,25 +11,20 @@
     "lint": "eslint src"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "axios": "^1.6.0",
-    "pinata-web3": "^1.0.0",
-    "multer": "^1.4.5-lts.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.1.2",
-    "mongoose": "^8.0.0",
-    "joi": "^17.11.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "express-ratelimit": "^7.1.5"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "typescript": "^5.3.3",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.0",
     "tsx": "^4.7.0",
-    "eslint": "^8.55.0",
-    "@types/jest": "^29.5.11"
+    "typescript": "^5.3.3"
   }
 }
