Revert to private-key deployment and remove mnemonic flow

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,12 @@
 export VITE_NETWORK=testnet
 export VITE_API_URL=http://localhost:3001/api
-export VITE_CONTRACT_ADDRESS=your_contract_address_here
+
+# Stacks Contract Addresses (Testnet)
+export VITE_NFT_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.bitart-nft
+export VITE_MARKETPLACE_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.bitart-marketplace
+export VITE_AUCTION_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.better-copper-lemming
+
+# Celo Network (Alfajores Testnet)
 export VITE_CELO_RPC_URL=https://alfajores-forno.celo-testnet.org
 export VITE_CELO_CHAIN_ID=0xaef3
 export VITE_CELO_CHAIN_NAME="Celo Alfajores Testnet"
