Update deployed contract addresses (nft, marketplace)

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,8 +2,8 @@ export VITE_NETWORK=testnet
 export VITE_API_URL=http://localhost:3001/api
 
 # Stacks Contract Addresses (Testnet)
-export VITE_NFT_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.bitart-nft
-export VITE_MARKETPLACE_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.bitart-marketplace
+export VITE_NFT_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.colorful-lime-guan
+export VITE_MARKETPLACE_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.partial-harlequin-tahr
 export VITE_AUCTION_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.better-copper-lemming
 
 # Celo Network (Alfajores Testnet)
