feat: Migrate Celo to Base mainnet and add Solidity contracts for Base
- Replace Celo with Base mainnet configuration
  - Update RPC URLs from Alfajores testnet to Base mainnet (https://mainnet.base.org)
  - Update chain IDs: 0xaef3 (Celo) → 0x2105 (Base mainnet)
  - Update currency: CELO → ETH
  - Update explorers: Blockscout → Basescan

- Update frontend and backend services
  - Migrate celoService to baseService
  - Update wallet service for Base chain (0x2105)
  - Update store and hooks to support Base chain

- Add Solidity smart contracts for Base mainnet
  - BitArtNFT.sol: ERC721 NFT contract with royalty support (EIP-2981)
  - BitArtMarketplace.sol: Marketplace for buying/selling with royalty distribution
  - BitArtAuction.sol: Auction contract with bidding and reserve prices

- Add Remix deployment guide
  - REMIX_DEPLOYMENT.md: Step-by-step guide for deploying on Remix IDE
  - Updated README.md with Remix instructions
  - All contracts ready for manual deployment on Base mainnet

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,9 +6,9 @@ export VITE_NFT_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.colorful-lime
 export VITE_MARKETPLACE_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.partial-harlequin-tahr
 export VITE_AUCTION_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.better-copper-lemming
 
-# Celo Network (Alfajores Testnet)
-export VITE_CELO_RPC_URL=https://alfajores-forno.celo-testnet.org
-export VITE_CELO_CHAIN_ID=0xaef3
-export VITE_CELO_CHAIN_NAME="Celo Alfajores Testnet"
-export VITE_CELO_CURRENCY=CELO
-export VITE_CELO_EXPLORER=https://alfajores-blockscout.celo-testnet.org
+# Base Network (Mainnet)
+export VITE_BASE_RPC_URL=https://mainnet.base.org
+export VITE_BASE_CHAIN_ID=0x2105
+export VITE_BASE_CHAIN_NAME="Base Mainnet"
+export VITE_BASE_CURRENCY=ETH
+export VITE_BASE_EXPLORER=https://basescan.org
