docs: Update contract addresses with BitArtNFT deployment (0xD15D1766cd7c2D4FbcEb4f015CbD54058304d682)

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,7 +2,7 @@ export VITE_NETWORK=testnet
 export VITE_API_URL=http://localhost:3001/api
 
 # Stacks Contract Addresses (Testnet)
-export VITE_NFT_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.colorful-lime-guan
+export VITE_NFT_CONTRACT=0xD15D1766cd7c2D4FbcEb4f015CbD54058304d682
 export VITE_MARKETPLACE_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.partial-harlequin-tahr
 export VITE_AUCTION_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.better-copper-lemming
 
