--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,9 +2,14 @@ export VITE_NETWORK=testnet
 export VITE_API_URL=http://localhost:3001/api
 
 # Stacks Contract Addresses (Testnet)
-export VITE_NFT_CONTRACT=0xD15D1766cd7c2D4FbcEb4f015CbD54058304d682
+export VITE_NFT_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.colorful-lime-guan
 export VITE_MARKETPLACE_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.partial-harlequin-tahr
 export VITE_AUCTION_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.better-copper-lemming
+
+# Base Contract Addresses (Mainnet)
+export VITE_BASE_NFT_CONTRACT=0xD15D1766cd7c2D4FbcEb4f015CbD54058304d682
+export VITE_BASE_MARKETPLACE_CONTRACT=TBD
+export VITE_BASE_AUCTION_CONTRACT=TBD
 
 # Base Network (Mainnet)
 export VITE_BASE_RPC_URL=https://mainnet.base.org
