feat: Enhance environment configuration with type-safe access and validation

--- a/.env.production.backend
+++ b/.env.production.backend
@@ -1,4 +1,6 @@
-# Backend Production Environment Variables
+The designs have been generated for your ComCelo web app:
+
+Tournament/Leaderboard: This screen will feature lists of active and upcoming tournaments, including details like prize pools, entry requirements, and dates. It will also display global player rankings with names, ranks, and key stats such as wins and win rates, offering clear navigation between tournament and leaderboard views within the game's competitive, tactical theme.# Backend Production Environment Variables
 NODE_ENV=production
 PORT=3001
 
