--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,32 @@
-export NODE_ENV=development
-export PORT=3001
-export NETWORK=testnet
-export STACKS_API_URL=https://api.testnet.stacks.co
-export IPFS_GATEWAY=https://gateway.pinata.cloud
-export PINATA_JWT=your_pinata_jwt_token_here
-export ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
-export BASE_RPC_URL=https://mainnet.base.org
+# Server Configuration
+PORT=3001
+NODE_ENV=development
+
+# Network Configuration
+NETWORK=testnet
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+
+# Stacks Configuration
+STACKS_API_URL=https://api.testnet.stacks.co
+NFT_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.colorful-lime-guan
+MARKETPLACE_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.partial-harlequin-tahr
+AUCTION_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.better-copper-lemming
+
+# Base (L2) Configuration
+BASE_RPC_URL=https://mainnet.base.org
+BASE_NFT_CONTRACT=0xD15D1766cd7c2D4FbcEb4f015CbD54058304d682
+BASE_MARKETPLACE_CONTRACT=0x7d28443e3571faB3821d669537E45484E4A06AC9
+BASE_AUCTION_CONTRACT=0x2119FA24f5C1973eE5c9886E850eB5E835d1ABD2
+
+# IPFS Configuration (Pinata)
+PINATA_JWT=your_pinata_jwt_token_here
+PINATA_GATEWAY=https://gateway.pinata.cloud
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+UPLOAD_LIMIT_WINDOW_MS=3600000
+UPLOAD_LIMIT_MAX_REQUESTS=20
+
+# Security
+API_SECRET_KEY=your_secret_key_here
