--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,19 +1,23 @@
-export VITE_NETWORK=testnet
-export VITE_API_URL=http://localhost:3001/api
+# API Configuration
+VITE_API_URL=http://localhost:3001/api
+VITE_NETWORK=testnet
 
-# Stacks Contract Addresses (Testnet)
-export VITE_NFT_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.colorful-lime-guan
-export VITE_MARKETPLACE_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.partial-harlequin-tahr
-export VITE_AUCTION_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.better-copper-lemming
+# Stacks Configuration
+VITE_STACKS_API_URL=https://api.testnet.stacks.co
+VITE_NFT_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.colorful-lime-guan
+VITE_MARKETPLACE_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.partial-harlequin-tahr
+VITE_AUCTION_CONTRACT=ST1VJDKVGZ3S0G0TB0J4HG6KA8JDK33BBVADW2P4J.better-copper-lemming
 
-# Base Contract Addresses (Mainnet)
-export VITE_BASE_NFT_CONTRACT=0xD15D1766cd7c2D4FbcEb4f015CbD54058304d682
-export VITE_BASE_MARKETPLACE_CONTRACT=0x7d28443e3571faB3821d669537E45484E4A06AC9
-export VITE_BASE_AUCTION_CONTRACT=0x2119FA24f5C1973eE5c9886E850eB5E835d1ABD2
+# Base (L2) Configuration
+VITE_BASE_RPC_URL=https://mainnet.base.org
+VITE_BASE_CHAIN_ID=8453
+VITE_BASE_NFT_CONTRACT=0xD15D1766cd7c2D4FbcEb4f015CbD54058304d682
+VITE_BASE_MARKETPLACE_CONTRACT=0x7d28443e3571faB3821d669537E45484E4A06AC9
+VITE_BASE_AUCTION_CONTRACT=0x2119FA24f5C1973eE5c9886E850eB5E835d1ABD2
+VITE_BASE_CHAIN_NAME="Base Mainnet"
+VITE_BASE_CURRENCY=ETH
+VITE_BASE_EXPLORER=https://basescan.org
 
-# Base Network (Mainnet)
-export VITE_BASE_RPC_URL=https://mainnet.base.org
-export VITE_BASE_CHAIN_ID=0x2105
-export VITE_BASE_CHAIN_NAME="Base Mainnet"
-export VITE_BASE_CURRENCY=ETH
-export VITE_BASE_EXPLORER=https://basescan.org
+# Feature Flags
+VITE_ENABLE_BASE=true
+VITE_ENABLE_STACKS=true
